# bagel

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml
src/main/icons/: README.md
src/main/python/: add_contractor.py  add_contractor_dialog.py  add_user.py  add_user_dialog.py  ctx.py  delete_user.py  delete_user_dialog.py  login.py  login_dialog.py  main.py  main_widget.py  main_window.py  utils.py
src/main/python/ui/: Pipfile.py  add_contractor.py  add_contractor_dialog.py  add_user.py  add_user_dialog.py  delete_user.py  delete_user_dialog.py  login.py  login_dialog.py  main.py  main_widget.py  main_window.py
